[gd_scene load_steps=79 format=2]

[ext_resource path="res://Enemies/EnemyList/Skeleton/SkeletonManager.gd" type="Script" id=1]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_00.png" type="Texture" id=3]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_05.png" type="Texture" id=7]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_06.png" type="Texture" id=8]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_08.png" type="Texture" id=10]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_09.png" type="Texture" id=11]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_10.png" type="Texture" id=12]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_11.png" type="Texture" id=13]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_12.png" type="Texture" id=14]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_13.png" type="Texture" id=15]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_14.png" type="Texture" id=16]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_15.png" type="Texture" id=17]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_16.png" type="Texture" id=18]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_17.png" type="Texture" id=19]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_18.png" type="Texture" id=20]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Attack/sprite_19.png" type="Texture" id=21]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_01.png" type="Texture" id=22]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_02.png" type="Texture" id=23]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_03.png" type="Texture" id=24]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_04.png" type="Texture" id=25]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_05.png" type="Texture" id=26]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_06.png" type="Texture" id=27]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_07.png" type="Texture" id=28]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_08.png" type="Texture" id=29]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_09.png" type="Texture" id=30]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_10.png" type="Texture" id=31]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Death/sprite_11.png" type="Texture" id=32]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_00.png" type="Texture" id=33]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_01.png" type="Texture" id=34]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_02.png" type="Texture" id=35]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_03.png" type="Texture" id=36]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_04.png" type="Texture" id=37]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_05.png" type="Texture" id=38]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_06.png" type="Texture" id=39]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_07.png" type="Texture" id=40]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_08.png" type="Texture" id=41]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_09.png" type="Texture" id=42]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_10.png" type="Texture" id=43]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_11.png" type="Texture" id=44]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_12.png" type="Texture" id=45]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_13.png" type="Texture" id=46]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_14.png" type="Texture" id=47]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Hurt/sprite_15.png" type="Texture" id=48]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_00.png" type="Texture" id=49]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_01.png" type="Texture" id=50]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_02.png" type="Texture" id=51]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_03.png" type="Texture" id=52]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_04.png" type="Texture" id=53]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_05.png" type="Texture" id=54]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_06.png" type="Texture" id=55]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_07.png" type="Texture" id=56]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_08.png" type="Texture" id=57]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_09.png" type="Texture" id=58]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_10.png" type="Texture" id=59]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_11.png" type="Texture" id=60]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_12.png" type="Texture" id=61]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_13.png" type="Texture" id=62]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_14.png" type="Texture" id=63]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_15.png" type="Texture" id=64]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_16.png" type="Texture" id=65]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_17.png" type="Texture" id=66]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_18.png" type="Texture" id=67]
[ext_resource path="res://Assets/Visual/Enemies/Skeleton/Walk/sprite_19.png" type="Texture" id=68]
[ext_resource path="res://Utils/Attack.gd" type="Script" id=69]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.37783
height = 13.0733

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.28749
height = 9.94252

[sub_resource type="CapsuleShape2D" id=3]
height = 14.8796

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 0.95
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.05, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -10.619, -10.8449 ), Vector2( -15.5896, -11.5227 ), Vector2( 13.1043, 4.06685 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Hitbox/CollisionShape2D:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ -48.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Hitbox/CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 2 ), SubResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_state_neutral"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "die"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.6
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Hurtbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_state_neutral"
} ]
}

[sub_resource type="Animation" id=7]
length = 1.9
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1 ),
"update": 1,
"values": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 11.0545, 13.147 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6.45151, 16.958 )

[node name="Skeleton" type="KinematicBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 9
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.199598, 3.40731 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -6.81381, 3.05944 )
scale = Vector2( 1.54152, 1.30594 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
playback_process_mode = 0
anims/attack = SubResource( 4 )
anims/death = SubResource( 5 )
anims/hurt = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
visible = false
position = Vector2( 0.177204, 2.90978 )
shape = SubResource( 8 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
monitoring = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 69 )
_knockback = Vector2( 300, 0 )
_damage = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( -10.619, -10.8449 )
rotation = -0.837758
shape = SubResource( 2 )
disabled = true

[node name="PlayerDetectors" type="Node2D" parent="."]

[node name="AttackDetector" type="Area2D" parent="PlayerDetectors"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectors/AttackDetector"]
position = Vector2( 15.7343, 3.89889 )
shape = SubResource( 9 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="start_up"]
[connection signal="area_entered" from="Hurtbox" to="." method="received_hit"]
[connection signal="area_entered" from="PlayerDetectors/AttackDetector" to="." method="player_in_attack_range"]
[connection signal="area_exited" from="PlayerDetectors/AttackDetector" to="." method="player_left_attack_range"]
